[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Actor/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actor/Characters/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Actor/hair/hair_upswept.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_moving.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_idle.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_interacting.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_dying.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_approaching.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Actor/Characters/States/character_state_attacking.gd" type="Script" id=9]
[ext_resource path="res://Scenes/ObjectComponents/Interactable/interactable.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Actor/InventoryManager/inventoryMgr.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/CharacterComponents/StatBlock/StatBlock.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/CharacterComponents/SightCone/SightCone.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Dialog/SpeechBubble.tscn" type="PackedScene" id=14]

[node name="Character" instance=ExtResource( 1 )]
pause_mode = 2
collision_layer = 4
script = ExtResource( 2 )
shirtColor = Color( 0.117647, 0.203922, 0.537255, 1 )

[node name="hair" parent="." index="3"]
texture = ExtResource( 3 )

[node name="hands" parent="." index="4"]
pause_mode = 1

[node name="AnimationPlayer" parent="." index="5"]
pause_mode = 1

[node name="stateMachine" parent="." index="6"]
pause_mode = 1

[node name="moving" type="Node" parent="stateMachine" index="0"]
script = ExtResource( 4 )
is_starting_state = false

[node name="idle" type="Node" parent="stateMachine" index="1"]
script = ExtResource( 5 )
is_starting_state = true

[node name="turn_timer" type="Timer" parent="stateMachine/idle" index="0"]

[node name="interacting" type="Node" parent="stateMachine" index="2"]
script = ExtResource( 6 )

[node name="dying" type="Node" parent="stateMachine" index="3"]
script = ExtResource( 7 )

[node name="approaching" type="Node" parent="stateMachine" index="4"]
script = ExtResource( 8 )

[node name="attacking" type="Node" parent="stateMachine" index="5"]
script = ExtResource( 9 )

[node name="attack_timer" type="Timer" parent="stateMachine/attacking" index="0"]
process_mode = 0
one_shot = true

[node name="strafe_timer" type="Timer" parent="stateMachine/attacking" index="1"]
one_shot = true

[node name="hitbox" parent="." index="8"]
collision_layer = 0
collision_mask = 8

[node name="interactable" parent="." index="9" instance=ExtResource( 10 )]
outline_shader = ""
option_lines = "talk"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="interactable/area" index="0"]
polygon = PoolVector2Array( -6, 7, -8, -1, -10, -11, -12, -19, -12, -37, -10, -39, 10, -39, 12, -37, 12, -19, 10, -11, 8, -1, 6, 7 )

[node name="host_name" parent="interactable" index="1"]
margin_left = -20.0
margin_top = -56.0
margin_right = 20.0
margin_bottom = -42.0

[node name="inventoryMgr" parent="." index="10" instance=ExtResource( 11 )]
auto_equip = true

[node name="StatBlock" parent="." index="11" instance=ExtResource( 12 )]
mouse_filter = 1

[node name="SightCone" parent="." index="12" instance=ExtResource( 13 )]

[node name="SpeechBubble" parent="." index="13" instance=ExtResource( 14 )]
margin_top = -49.0
margin_right = 0.0
margin_bottom = -49.0
[connection signal="arrived_at_move_target" from="." to="stateMachine/moving" method="_on_Character_arrived"]
[connection signal="timeout" from="stateMachine/idle/turn_timer" to="stateMachine/idle" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="stateMachine/attacking/attack_timer" to="stateMachine/attacking" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="stateMachine/attacking/strafe_timer" to="stateMachine/attacking" method="_on_strafe_timer_timeout"]
[connection signal="zero_health" from="StatBlock" to="." method="_on_StatBlock_zero_health"]
[connection signal="objects_sighted" from="SightCone" to="." method="_on_update_sight_cone"]

[editable path="hands"]

[editable path="interactable"]

[editable path="StatBlock"]
